# atriumdb-benchmarking

./: .gitignore  CMakeLists.txt  README.md  benchmark.py
codecs/: bindings.cpp  bzip2.cpp  codec.hpp  golomb.cpp  lzma.cpp  preprocess.hpp  zstd.cpp
scripts/: build_mitdb_dataset.py
